--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,17 +1,25 @@
 <h2>Productos</h2>
 
 <div *ngFor="let pollo of products">
-  <h3>
-    <a [title]="pollo.name + ' details'">
-      {{ pollo.name }}
-    </a>
-  </h3>
+	<h3>
+		<a [title]="pollo.name + ' details'">
+			{{ pollo.name }}
+		</a>
+	</h3>
   <p *ngIf="pollo.description">
-    Description: {{ pollo.description }}
-  </p>
-  <button (click)="share()">
+		Price: {{ pollo.description }}
+	</p>
+	<p *ngIf="pollo.price">
+		Price: {{ pollo.price }}
+	</p>
+
+	<button (click)="share()">
     Share
   </button>
-  <app-product-alerts [product]="pollo" (polleteDeLaVentana)="onPollete()">
-  </app-product-alerts>
+
+	<app-product-alerts [product]="pollo" (polleteDeLaVentana)="onPollete()">
+	</app-product-alerts>
+
+
+
 </div>
